--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <a href=/tos/>用户协议及隐私政策</a> 。</p><p>网站源代码已经在
 <a href=https://github.com/moelylink/moely.link target=_blank rel="noopener noreferrer">GitHub</a> 上开源，喜欢的话star支持一下！</p><p>本站域名：
 <a href=https://www.moely.link/>moely.link</a></p><p>我们的Telegram频道：
-<a href=https://t.me/gongzhutonghao target=_blank rel="noopener noreferrer">@gongzhutonghao</a></p><h2 id=友情链接>友情链接</h2><p><a href=https://manyacg.top/ target=_blank rel="noopener noreferrer">ManyACG - 二次元美图精选收集</a></p><h2 id=网站特性>网站特性</h2><ul><li>响应式瀑布流设计</li><li>图片懒加载、图片灯箱效果</li><li>详情页图片信息（画师、描述等）展示</li><li>通过标签筛选图片</li><li>每张图均配有来源链接</li><li>支持最高4K分辨率的原图下载</li><li>PWA（渐进式网络应用程序）支持</li><li>随机传送功能，每次一点小惊喜～</li><li>用户中心、收藏列表[Beta]</li></ul><br><h2 id=关于更新>关于更新</h2><p>本网站内容均精选自
+<a href=https://t.me/gongzhutonghao target=_blank rel="noopener noreferrer">@gongzhutonghao</a></p><p>本网站原创IP：</p><p><img src=/assets/img/moely.jpg alt=moely style=width:100%;max-width:300px data-fancybox=gallery data-src=/assets/img/moely.jpg><br></p><h2 id=网站特性>网站特性</h2><ul><li>响应式瀑布流设计</li><li>图片懒加载、图片灯箱效果</li><li>详情页图片信息（画师、描述等）展示</li><li>通过标签筛选图片</li><li>每张图均配有来源链接</li><li>支持最高4K分辨率的原图下载</li><li>PWA（渐进式网络应用程序）支持</li><li>随机传送功能，每次一点小惊喜～</li><li>用户中心、收藏列表[Beta]</li></ul><br><h2 id=关于更新>关于更新</h2><p>本网站内容均精选自
 <a href=https://www.pixiv.net/ target=_blank rel="noopener noreferrer">Pixiv</a> 和
 <a href=https://twitter.com/ target=_blank rel="noopener noreferrer">Twitter（现称X）</a> ，经过人工筛查后推送，或许更新频率不是很高，但是我们注重每一张图的质量。</p><p>默认情况下，本站图片按照作者发布日期（由新到旧）排序。</p><h2 id=更新日志>更新日志</h2><p>2024年10月21日 网站开始内测</p><p>2024年10月24日 网站正式上线</p><p>2024年12月8日 新增：
 <a href=/tags/>标签页面</a>、图片分享按钮</p><p>2024年12月14日 支持自动识别推文中的标签</p><p>2024年12月15日 新增：
